Fixed animation glitch on iOS

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@ body {
     height: 100vh;
 }
 
+body:not(.iOS) #lines * {
+  mix-blend-mode: lighten;
+}
+
 .intro-title {
     font-size: 4em;
     padding: 0 0 0 0;
@@ -118,8 +122,10 @@ button::-moz-focus-inner {
 #canv {
     position: absolute;
     display: block;
-    width: 100vw;
-    height: 100vh;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     cursor: pointer; 
     pointer-events:none;
 }
